--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Pages</h1>
+        <h1>All things</h1>
         <p>Github Pages</p>
         <p class="view"><a href="https://github.com/sandeepseshadri">View the Project on GitHub <small>sandeepseshadri</small></a></p>
         <ul>
